syntax = "proto3";

option java_multiple_files = true;
package todo.command;

message TodoUpdateCommandProto {
  string txKey = 1;
  string logTrackKey = 2;
  int64 id = 3;
  string info = 4;
  string status = 5;
}
